[tool.poetry]
name = "repl-nix-creaditscardtools"
version = "0.1.0"
description = ""
authors = ["anish "]
readme = "README.md"
#packages = [{include = "repl_nix_creaditscardtools"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
setuptools = "^69.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
