[tool.poetry]
name = "CreaditsCardTools"
version = "0.1.0"
description = "A module for performing BIN lookup using the binlist.net API"
authors = ["anish"]
readme = "README.md"
packages = [{ include = "repl_nix_creaditscardtools" }]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
